<resources>
    <string name="app_name">Order Food</string>

    <string name="facebook_app_id" translatable="false">841797059892529</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb841797059892529</string>


    <string name="sign_up">Đăng ký</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="enter_phone_number">Nhập số điện thoại của bạn</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="_0385035105">0385035105</string>
    <string name="enter_your_name">Nhập họ tên của bạn</string>
    <string name="_menu">Menu</string>
    <string name="cart">Giỏ hàng</string>
    <string name="order">Đơn hàng</string>
    <string name="me">Tôi</string>
    <string name="price">100.000đ</string>
    <string name="search_foods_your_here">Tìm kiếm món ăn ở đây</string>
    <string name="address">26 đường Ngô Đức Kế, thành phố Vinh, tỉnh Nghệ An</string>
    <string name="view_more">Xem thêm</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_address">Nhập địa chỉ</string>
    <string name="liked">Đã thích</string>
    <string name="add_address_your_house">Thêm địa chỉ công ty của bạn</string>
    <string name="add_address_your_company">Thêm địa chỉ nhà của bạn</string>
    <string name="restaurant">Nhà hàng</string>
    <string name="book">Đặt Bàn</string>
    <string name="free_ship">Free ship</string>
    <string name="restaurant_favorite">Quán Yêu Thích</string>
    <string name="favorite">Yêu thích</string>
    <string name="drink">Thức uống</string>p
    <string name="fast_food">Thức ăn nhanh</string>
    <string name="milk_tea">Trà sữa</string>
    <string name="rice">Cơm</string>
    <string name="description">Chicken served in curry that is made from more than 10 spices to bring out the authentic traditional taste. Served with rice and 3 side dishes</string>
    <string name="text">Giá:</string>
    <string name="total">Tổng:</string>
    <string name="food">Food</string>
    <string name="shipping">Giao hàng</string>
    <string name="name">Họ tên:</string>
    <string name="phone_number">Số điện thoại:</string>
    <string name="menu">Thể loại</string>
    <string name="history">Lịch sử</string>
    <string name="your_profile">Trang cá nhân</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="payment">Thanh toán</string>
    <string name="invite_friend">Mời bạn bè</string>
    <string name="supported">Hỗ trợ</string>
    <string name="setting">Cài đặt</string>
    <string name="app_for_salesman">Ứng dụng cho người bán hàng</string>
    <string name="sign_in_with_facebook">Đăng nhập với Facebook</string>
    <string name="sign_in_with_google">Đăng nhập với Google</string>
    <string name="enter_code">Nhập mã</string>
    <string name="enter_your_address">Nhập địa chỉ của bạn</string>
    <string name="_continue">Tiếp tục</string>
    <string name="back">Quay lại</string>
    <string name="verify">Xác nhận</string>
    <string name="star">4,6</string>
    <string name="business_hours">Giờ mở cửa</string>
    <string name="_8_30">8:30 - 21:30</string>
    <string name="home">Home</string>
    <string name="name_restaurant">Shogun Japanese Street BBQ - City Hub Le Hong Phong</string>
    <string name="country_code">VN +84</string>
    <string name="all_delete">Xóa hết</string>
    <string name="food_name">Cơm tấm sườn nuóng cốt lết nuóng chả trứng</string>
    <string name="comment">Nhập bình luận của bạn</string>
    <string name="date_time">15:17 12/10/2020</string>
    <string name="near_by_you">Gần bạn</string>
    <string name="save">Lưu</string>
    <string name="favorite_restaurant">Quán yêu thích</string>
    <string name="search_food">Tìm món tại quán</string>
    <string name="edit">Sửa</string>
    <string name="money">Tiền mặt</string>
    <string name="airpay">Ví AirPay</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="content">Đặt hàng - 61,000đ</string>
    <string name="great">Tuyet voi</string>
    <string name="suggestion">Có thể bạn cũng muốn</string>
    <string name="like">1,423k</string>
    <string name="content_promotion">Giảm 25% hoá đơn thúc ăn từ ngày 18/09 - đến ngày 2/1/2021</string>
    <string name="what_kind_of_food_your_like">Bạn thích loại thức ăn nào ?</string>
    <string name="saved">Đã lưu</string>
</resources>