<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView app:cardElevation="5dp"
    android:layout_margin="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:id="@+id/item_id_order"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/_0385035105"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:textAllCaps="true"
                android:id="@+id/item_status_order"
                android:text="@string/shipping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:padding="5dp"
            android:id="@+id/item_address_order"
            android:textStyle="bold"
            android:textColor="#C1C0C0"
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@android:color/black"
                android:layout_marginStart="10dp"
                android:id="@+id/item_name_order"
                android:text="@string/me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@android:color/black"
                android:layout_marginStart="10dp"
                android:id="@+id/item_phone_number_order"
                android:text="@string/_0385035105"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>