<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:padding="10dp"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/item_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop" />

            <TextView
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_baseline_thumb_up"
                android:textSize="12sp"
                android:id="@+id/item_favorite_restaurant"
                android:padding="3dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="#ff00"
                android:text="@string/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold"
            android:id="@+id/item_name_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black" />

        <TextView
            android:ellipsize="end"
            android:maxLines="1"
            android:id="@+id/item_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="#BFBCBC" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_hours"
                    android:textColor="@android:color/black" />

                <TextView

                    android:id="@+id/item_business_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/_8_30"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:id="@+id/item_stars"
                app:drawableEndCompat="@drawable/ic_baseline_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>