<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/item_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:id="@+id/item_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/price" />

            <TextView
                android:textColor="@android:color/black"
                android:id="@+id/item_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like"
                app:drawableStartCompat="@drawable/ic_baseline_favorite_border" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>