<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="#FAF9F9"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layout1"
        android:background="@android:color/white"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_view_back"
                android:src="@drawable/ic_baseline_arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="Chọn địa chỉ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/image_view_add_address"
                android:src="@drawable/ic_baseline_add_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <EditText
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/icon_search"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text_comment"
            android:hint="@string/enter_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:drawablePadding="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_explore" />
    </LinearLayout>

    <TextView
        android:id="@+id/text"
        android:layout_below="@id/layout1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:text="@string/saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_below="@id/text"
        android:id="@+id/text_view_add_company_address"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:background="@android:color/white"
        android:padding="15dp"
        android:text="@string/add_address_your_house"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/ic_baseline_home"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios" />

    <TextView
        android:layout_below="@id/text_view_add_company_address"
        android:layout_marginTop="20dp"
        android:id="@+id/text_view_add_house_address"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:background="@android:color/white"
        android:padding="15dp"
        android:text="@string/add_address_your_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/ic_baseline_work_outline"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:text="Thêm địa chỉ mới"
            android:background="@drawable/custom_button"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>